first pass on ButtonHandler