@@ -120,12 +120,7 @@ public final class ModalDefinition extends EphemeralInteractionDefinition implem
 
     @Override
     public String createCustomId(String runtimeId) {
-        return String.format("%s.%s%s.%s",
-                PREFIX,
-                method.getDeclaringClass().getSimpleName(),
-                method.getName(),
-                runtimeId
-        );
+        return "%s.%s.%s".formatted(PREFIX, runtimeId, definitionId);
     }
 
     @Override
